# judged

./: NEWS  README
src/: Makefile.am  ampersand.code  child.c  child.h  command_become.c  command_become.h  command_broadcast.c  command_broadcast.h  command_generic.c  command_generic.h  command_list.c  command_list.h  command_press.c  command_press.h  command_register.c  command_register.h  command_send.c  command_send.h  command_set.c  command_set.h  command_whogame.c  command_whogame.h  config.c  config.h  fifo.c  fifo.h  incoming.c  incoming.h  ipc.c  ipc.h  judge-deliver.c  judge-fifo.c  judge-sock.c  judged.c  mail_processing.c  mail_processing.h  master.c  master.h  message.c  message.h  (+8 more)
